# api/controllers/AuthController.ts
@@ -123,3 +123,19 @@ export function registerAPI(req:any,res:any,next: any){
         res.json(JSON.parse(res_data.toString()));
     });
 }
+
+/**
+ * This is the Service call to resend otp
+ * @param req
+ * @param res
+ * @param next
+ */
+export function forgotPin(req:any,res:any,next: any){
+    var data = {"headers":req.headers,"param": req.body,"apiPath":req.originalUrl,"method":req.method};
+    var bus = new RMQBroker();
+    console.log(data);
+    bus.rpc("members.forgotPin", data).then((res_data) => {
+        console.log(res_data.toString());
+        res.json(JSON.parse(res_data.toString()));
+    });
+}
